--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </div>
         <div class="card text-center" id="help">
           <h2>About this page</h2>
-          <p>This page has been coded during the <a href="https://www.lewagon.com/fr"> FullStack program @LeWagon</a>. That was probably the best experience of my entire life.</p>
+          <p>This page has been coded during the <a href="https://www.lewagon.com/fr" target="_blank"> FullStack program @LeWagon</a>. That was probably the best experience of my entire life.</p>
         </div>
       </div>
     </div>
